# ros_mommy_daddy

./: README.md  calibrate_camera.py  calibrate_focal_length.py  central_control.py  child_controller.py  child_node.py  control_odom.py  detect_color.py  locate_april_tag.py  node_detect_audio.py  node_make_audio.py  node_wag_tail.py  parent_controller.py  parent_node.py  robot_explore.py  ros_testing.py  subscribe_controller.py  subscribe_odom.py  testing.py
perception/: locate_april_tag.py  miro_constants.py  miro_ros_interface.py  subscribe_range.py
relationship_msgs/: CMakeLists.txt  package.xml
relationship_msgs/msg/: Action.msg  RobotPub.msg
ros_mommy_daddy_msg/: CMakeLists.txt  package.xml
ros_mommy_daddy_msg/msg/: Action.msg  Emotion.msg  RobotPub.msg
ros_mommy_daddy_relationship/: CMakeLists.txt  package.xml
ros_mommy_daddy_relationship/launch/: relationship.launch
ros_mommy_daddy_relationship/odom_data/: child_odom_data_06-07-2022_00-29-32.npy  child_odom_data_06-08-2022_12-24-16.npy  child_odom_data_06-08-2022_12-26-31.npy  child_odom_data_06-08-2022_12-29-22.npy  child_odom_data_06-08-2022_12-39-04.npy  child_odom_data_06-08-2022_14-41-50.npy  child_odom_data_06-08-2022_14-43-08.npy  child_odom_data_06-08-2022_14-44-22.npy  child_odom_data_06-08-2022_15-47-46.npy  child_odom_data_06-08-2022_15-58-26.npy  child_odom_data_06-08-2022_16-03-12.npy  child_odom_data_06-08-2022_16-40-44.npy  child_odom_data_06-08-2022_16-45-25.npy  child_odom_data_06-08-2022_16-47-38.npy  child_odom_data_06-08-2022_16-52-23.npy  child_odom_data_06-08-2022_16-58-26.npy  (+219 more)
(+107 files in other folders)
